Working phonebook but it does not store the values, so you can't recover it

--- a/phonebook/phonebook.ui
+++ b/phonebook/phonebook.ui
@@ -78,5 +78,22 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>clearButton</sender>
+   <signal>clicked()</signal>
+   <receiver>list</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>302</x>
+     <y>194</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>163</x>
+     <y>160</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
